--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Shyam &amp; Rincy</h1>
+							<h1>Abraham Purba &amp; Milla</h1>
 							<br>
 							<img src="images/fprint.png" alt="Shyam + Rincy"> 
 							<h2>29.10.2023</h2>
